--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,31 @@
 
 </body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+  integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script src="/assets/js/bootstrap.bundle.js"></script>
+
+<script>
+  $(document).ready(function () {
+
+    $('.jol').bind('click', function (e) {
+      $('.navbar-collapse').collapse('show');
+
+      return false
+    });
+
+    $(document).click(function (event) {
+
+      var clickover = $(event.target);
+      var _opened = $(".navbar-collapse").hasClass("show");
+      if (_opened === true && !clickover.hasClass("navbar-toggler")) {
+        $("button.navbar-toggler").click();
+      }
+    });
+  });
+
+</script>
 
 </html>
